--- a/index.html
+++ b/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Smriti Hari | Portfolio</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <h1>Hello World</h1>
+
+<body class="bg-white text-gray-800 font-sans">
+  <header class="bg-gray-100 py-6 shadow">
+    <div class="max-w-4xl mx-auto px-4">
+      <h1 class="text-3xl font-bold">Smriti Hari</h1>
+      <p class="text-lg">Student | Developer | Tech Enthusiast</p>
+    </div>
+  </header>
+
+  <main class="max-w-4xl mx-auto px-4 py-10 space-y-16">
+    <!-- About Section -->
+    <section id="about">
+      <h2 class="text-2xl font-semibold mb-2">About Me</h2>
+      <p>
+        I’m a university student passionate about software development, machine learning,
+        and technology that creates impact.
+      </p>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+      <h2 class="text-2xl font-semibold mb-4">Projects</h2>
+      <ul class="space-y-4">
+        <li class="border rounded p-4">
+          <h3 class="font-bold text-lg">FireWatch</h3>
+          <p>An AI-driven system to predict wildfires and display real-time risk maps.</p>
+          <a href="#" class="text-blue-600 underline">View on GitHub</a>
+        </li>
+        <li class="border rounded p-4">
+          <h3 class="font-bold text-lg">Credit Card Fraud Detection</h3>
+          <p>Used machine learning to classify transactions and detect fraud with high accuracy.</p>
+          <a href="#" class="text-blue-600 underline">View on GitHub</a>
+        </li>
+      </ul>
+    </section>
+
+    <!-- Experience Section -->
+    <section id="experience">
+      <h2 class="text-2xl font-semibold mb-4">Experience</h2>
+      <ul class="list-disc pl-6">
+        <li>Machine Learning Fellow - AI4Good Lab</li>
+        <li>IT Director - ESS</li>
+        <li>VP Outreach - Millennium STEM Alberta</li>
+      </ul>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+      <h2 class="text-2xl font-semibold mb-4">Contact</h2>
+      <p>Email: <a href="mailto:smriti@email.com" class="text-blue-600 underline">smriti@email.com</a></p>
+      <p>GitHub: <a href="https://github.com/smritihari" target="_blank" class="text-blue-600 underline">@smritihari</a></p>
+    </section>
+  </main>
+
+  <footer class="bg-gray-100 text-center py-4 text-sm text-gray-600">
+    © 2025 Smriti Hari
+  </footer>
 </body>
+
 </html>
