--- a/index.html
+++ b/index.html
@@ -21,12 +21,23 @@
             sans: ['Inter', 'sans-serif']
           },
           animation: {
-            fadeIn: 'fadeIn 1s ease-in-out'
+            fadeIn: 'fadeIn 1s ease-in-out',
+            wave: 'wave 2s infinite'
           },
           keyframes: {
             fadeIn: {
               '0%': { opacity: 0 },
               '100%': { opacity: 1 }
+            },
+            wave: {
+              '0%': { transform: 'rotate(0.0deg)' },
+              '10%': { transform: 'rotate(14deg)' },
+              '20%': { transform: 'rotate(-8deg)' },
+              '30%': { transform: 'rotate(14deg)' },
+              '40%': { transform: 'rotate(-4deg)' },
+              '50%': { transform: 'rotate(10.0deg)' },
+              '60%': { transform: 'rotate(0.0deg)' },
+              '100%': { transform: 'rotate(0.0deg)' }
             }
           }
         }
@@ -42,15 +53,18 @@
 </head>
 
 <body class="bg-white text-gray-800 dark:bg-darkPurple dark:text-white font-sans animate-fadeIn">
-  <header class="bg-gray-100 dark:bg-darkPurple py-6 shadow">
-    <div class="max-w-4xl mx-auto px-4">
-      <div class="flex items-center justify-between">
+  <header class="bg-gray-100 dark:bg-darkPurple py-10 shadow">
+    <div class="max-w-4xl mx-auto px-4 flex flex-col md:flex-row items-center justify-between gap-6">
+      <div class="flex items-center gap-4">
+        <div class="text-5xl animate-wave">👋</div>
         <div>
-          <h1 class="text-3xl font-bold">Smriti Hari</h1>
-          <p class="text-lg text-gray-600 dark:text-softPurple">Student | Developer | Tech Enthusiast</p>
+          <h1 class="text-4xl font-extrabold">Hi, I'm Smriti Hari</h1>
+          <p class="text-lg text-gray-600 dark:text-softPurple">Software Developer & ML Enthusiast</p>
         </div>
-        <button id="toggle-dark" class="bg-gray-300 dark:bg-softPurple text-black dark:text-white px-4 py-2 rounded hover:scale-105 transition-transform">Toggle Theme</button>
       </div>
+      <button id="toggle-dark" class="bg-gray-300 dark:bg-softPurple text-black dark:text-white px-4 py-2 rounded hover:scale-105 transition-transform">
+        Dark Theme ☾
+      </button>
     </div>
   </header>
 
@@ -71,12 +85,12 @@
         <li class="border rounded p-4 dark:border-softPurple">
           <h3 class="font-bold text-lg">FireWatch</h3>
           <p>An AI-driven system to predict wildfires and display real-time risk maps.</p>
-          <a href="#" class="text-blue-600 dark:text-softPurple underline">View on GitHub</a>
+          <a href="https://github.com/SmritiUofA/FireWatch" class="text-blue-600 dark:text-softPurple underline">View on GitHub</a>
         </li>
         <li class="border rounded p-4 dark:border-softPurple">
           <h3 class="font-bold text-lg">Credit Card Fraud Detection</h3>
           <p>Used machine learning to classify transactions and detect fraud with high accuracy.</p>
-          <a href="#" class="text-blue-600 dark:text-softPurple underline">View on GitHub</a>
+          <a href="https://github.com/SmritiUofA/CreditCard_FraudDetection" class="text-blue-600 dark:text-softPurple underline">View on GitHub</a>
         </li>
       </ul>
     </section>
@@ -96,7 +110,7 @@
     <section id="contact">
       <h2 class="text-2xl font-semibold mb-4">Contact</h2>
       <p>Email: <a href="mailto:smritihari@gmail.com" class="text-blue-600 underline">smritihari@gmail.com</a></p>
-      <p>GitHub: <a href="https://github.com/SmritiUofA" target="_blank" class="text-blue-600 underline">@smritihari</a></p>
+      <p>GitHub: <a href="https://github.com/SmritiUofA" target="_blank" class="text-blue-600 underline">@SmritiUofA</a></p>
     </section>
   </main>
 
